--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,9 +20,13 @@ body {
 body {
   font-size: 16px;
   line-height: 28px;
-  background-color: #ffffff;
+  //background-color: #ffffff;
+  //background-color: #f5f7fa;
+  background-color: #f5f7fa2e;
+
   text-rendering: optimizeLegibility;
   font-weight: 400;
+
 }
 
 img {
@@ -97,8 +101,9 @@ h6 {
 
 .header {
   //box-shadow: 4px 0 10px 5px #0000001c;
-  //box-shadow: 4px 0 7px 1px #00000000;
-  border-bottom: 1px solid #0002;
+  box-shadow: 0 2px 8px 0 rgb(0 0 0 / 10%);
+  //box-shadow: 4px 0 7px 1px #0000001c;
+  //border-bottom: 1px solid #0002;
 }
 
 @media (min-width: 768px) {
@@ -450,17 +455,21 @@ header {
 
 .navbar-classic .navbar-nav .nav-item .nav-link {
   font-size: 15px;
-  color: #252328;
-  padding: 12px 6px;
+  font-weight: 500;
+  color: #252328d1;
+  padding: 12px 10px;
   line-height: 20px;
   border-bottom: 1px solid #fff;
+  &:hover {
+    color: #003b58;
+  }
 }
 
 /*MENU*/
 .dropdown-menu {
   position: absolute;
   top: 100%;
-  left: 0;
+  left: -50%;
   z-index: 1000;
   display: none;
   float: left;
@@ -604,7 +613,7 @@ header {
 .dropdown-item:hover {
   color: $red-color;
   text-decoration: none;
-  background-color: #ffefef;
+  background-color: #0058830f;
   border-radius: 4px;
 }
 
@@ -735,11 +744,19 @@ header {
  8. Footer
 -------------------------------------------------------------------*/
 .footer {
-  background-color: #302d34;
+  //background-color: #302d34;
+  //background-color: #f4f4f4;
+  background-color: #ffffff;
+
   padding-top: 100px;
   padding-bottom: 50px;
   color: #98969b;
   font-size: 14px;
+
+  a {
+    font-weight: 500;
+    color: $light-blue;
+  }
 }
 
 .footer-widget {
