--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -441,7 +441,7 @@ p {
   border-right: none;
   border-bottom: none;
   border-left: none;
-  color: #e7e5ea;
+  color: #545160;
   font-family: "Font Awesome\ 5 Free";
   font-weight: 900;
   margin-right: 15px;
@@ -456,7 +456,7 @@ header {
 .navbar-classic .navbar-nav .nav-item .nav-link {
   font-size: 15px;
   font-weight: 500;
-  color: #252328d1;
+  color: rgba(37, 35, 40, 0.91);
   padding: 12px 10px;
   line-height: 20px;
   border-bottom: 1px solid #fff;
